syntax = "proto3";
package bze.tradebin.v1;

import "gogoproto/gogo.proto";
import "tradebin/params.proto";
import "tradebin/market.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bze-alphateam/bze/x/tradebin/types";

// GenesisState defines the tradebin module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Market marketList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
